scrollbar fix

--- a/src/css/client.css
+++ b/src/css/client.css
@@ -50,6 +50,10 @@
   --floating-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
+html {
+  scrollbar-width: none;
+}
+
 body {
   font-family: var(--serif-font);
   margin: 0;
@@ -104,6 +108,10 @@ p {
   position: relative;
 }
 @media only screen and (min-width: 768px) {
+  html {
+    scrollbar-width: auto;
+  }
+  
   .container {
     max-width: 992px;
     margin: 0 auto;
